manifests/platform/istio/infrastructure-destinationrules.yaml
# DestinationRules for infrastructure services (databases, caches, message queues)
# Mode: DISABLE - These services use native protocols, not HTTP
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgres-primary-dr
  namespace: osaan-dev
spec:
  host: osaan-db-primary.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgres-ha-dr
  namespace: osaan-dev
spec:
  host: osaan-db-ha.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: valkey-primary-dr
  namespace: osaan-dev
spec:
  host: valkey.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rabbitmq-dr
  namespace: osaan-dev
spec:
  host: rabbitmq.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
